<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Iwara</string>
    <string name="test_name">多语言切换</string>
    <string name="safe_mode_off">安全模式关闭</string>
    <string name="load_failure" >加载失败</string>
    <string name="video_view">次观看</string>
    <string name="no_more">无更多结果</string>
    <string name="no_more_there" >RUA! 空空如也</string>
    <string name="serialization_error">JSON序列化异常</string>
    <string name="uncheckedioerror">IO异常</string>
    <string name="unsupported_mime_type">不支持的mime类型</string>
    <string name="unknow_error">未知错误</string>
    <string name="socket_time_out">连接超时</string>
    <string name="url_is_empty">URL为空</string>
    <string name="main_click_next_exit">再按一次返回键返回到桌面</string>
    <string name="get_update_fail">获取更新信息出错</string>
    <string name="is_new">当前已是最新版本</string>
    <string name="update">更新</string>
    <string name="update_info">版本号: %1$s\n大小: %2$s\n\n更新详情:\n%3$s</string>
    <string name="ignore">忽略</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="get_follow_allCount">获取关注总人数</string>
    <string name="follow">关注</string>
    <string name="unfollow">取消关注</string>
    <string name="isfollow">已关注</string>
    <string name="like">喜欢</string>
    <string name="share">分享</string>
    <string name="download">下载</string>
    <string name="save">保存</string>
    <string name="user_corr">用户相关:</string>
    <string name="text_recomm">相关推荐:</string>
    <string name="comment_tip">请自觉维护社区环境,理性发言</string>
    <string name="uploaddate">上传日期:%1$s</string>
    <string name="video_private">该视频仅好友可见</string>
    <string name="reply">条回复</string>
    <string name="unknow_exception">未知异常</string>
    <string name="io_exception">网络异常</string>
    <string name="client_timeout">连接超时</string>
</resources>
