<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.zhkrb.iwara.custom.FoldTextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:ellipsize="end"
        android:textSize="16sp"
        android:textColor="@color/textColor_black_medium"
        android:letterSpacing="@dimen/h5_ls"
        android:paddingTop="12dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingBottom="8dp"
        android:id="@+id/title"
        app:isRotateDrawable="true"
        app:foldLine="1"
        android:drawableEnd="@drawable/rotate_drawable_arrow_black"
        android:drawablePadding="5dp"
        android:clickable="true"
        android:focusable="true"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/textColor_black_disable"
        android:textSize="@dimen/caption"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        android:id="@+id/text_video_view"
        android:drawableStart="@drawable/ic_eye_12dp"
        android:drawablePadding="4dp"
        android:layout_marginTop="8dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/textColor_black_disable"
        android:textSize="@dimen/caption"
        app:layout_constraintTop_toTopOf="@id/text_video_view"
        app:layout_constraintBottom_toBottomOf="@id/text_video_view"
        app:layout_constraintStart_toEndOf="@id/text_video_view"
        android:layout_marginStart="4dp"
        android:id="@+id/text_video_comment"
        android:drawableStart="@drawable/ic_subtitles_12dp"
        android:drawablePadding="4dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/textColor_black_disable"
        android:textSize="@dimen/caption"
        app:layout_constraintTop_toTopOf="@id/text_video_view"
        app:layout_constraintBottom_toBottomOf="@id/text_video_view"
        app:layout_constraintStart_toEndOf="@id/text_video_comment"
        android:layout_marginStart="8dp"
        android:id="@+id/text_video_upload_date"
        />

    <Button
        android:layout_width="40dp"
        android:layout_height="52dp"
        app:layout_constraintTop_toBottomOf="@id/text_video_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_share"
        android:layout_marginTop="12dp"
        android:background="?android:selectableItemBackgroundBorderless"
        android:drawableTop="@drawable/ic_favorite_black_32dp"
        android:text="@string/like"
        android:textColor="@color/secondaryText"
        android:textSize="@dimen/caption"
        android:id="@+id/btn_like"
        />

    <Button
        android:layout_width="40dp"
        android:layout_height="52dp"
        app:layout_constraintTop_toTopOf="@id/btn_like"
        app:layout_constraintStart_toEndOf="@id/btn_like"
        app:layout_constraintEnd_toStartOf="@id/btn_download"
        android:background="?android:selectableItemBackgroundBorderless"
        android:drawableTop="@drawable/ic_share_black_32dp"
        android:text="@string/share"
        android:textColor="@color/secondaryText"
        android:textSize="@dimen/caption"
        android:id="@+id/btn_share"
        />

    <Button
        android:layout_width="40dp"
        android:layout_height="52dp"
        app:layout_constraintTop_toTopOf="@id/btn_like"
        app:layout_constraintStart_toEndOf="@id/btn_share"
        app:layout_constraintEnd_toStartOf="@id/btn_save"
        android:background="?android:selectableItemBackgroundBorderless"
        android:drawableTop="@drawable/ic_file_download_black_32dp"
        android:text="@string/download"
        android:textColor="@color/secondaryText"
        android:textSize="@dimen/caption"
        android:id="@+id/btn_download"
        />

    <Button
        android:layout_width="40dp"
        android:layout_height="52dp"
        app:layout_constraintTop_toTopOf="@id/btn_like"
        app:layout_constraintStart_toEndOf="@id/btn_download"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="?android:selectableItemBackgroundBorderless"
        android:drawableTop="@drawable/ic_add_to_black_24dp"
        android:text="@string/save"
        android:textColor="@color/secondaryText"
        android:textSize="@dimen/caption"
        android:id="@+id/btn_save"
        />

    <View
        android:layout_width="0dp"
        android:layout_height="0.5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_like"
        android:background="@color/textColor_black_disable"
        android:layout_marginTop="12dp"
        android:id="@+id/divider_line"
        />


    <ImageView
        android:layout_width="48dp"
        android:layout_height="48dp"
        app:layout_constraintTop_toBottomOf="@id/divider_line"
        app:layout_constraintStart_toStartOf="@id/text_video_view"
        android:layout_marginTop="16dp"
        android:scaleType="centerCrop"
        android:id="@+id/artist_thumb"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/artist_thumb"
        app:layout_constraintStart_toEndOf="@id/artist_thumb"
        android:layout_marginStart="16dp"
        android:textSize="@dimen/subtitle1"
        android:textColor="@color/colorPrimary"
        android:maxEms="15"
        android:id="@+id/artist_name"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/artist_thumb"
        app:layout_constraintStart_toEndOf="@id/artist_thumb"
        android:layout_marginStart="16dp"
        android:text="@string/get_follow_allCount"
        android:textSize="@dimen/subtitle2"
        android:textColor="@color/textColor_black_disable"
        android:id="@+id/artist_follow"
        />

    <com.zhkrb.iwara.custom.SwitchButton
        android:layout_width="60dp"
        android:layout_height="28dp"
        app:layout_constraintBottom_toBottomOf="@id/artist_thumb"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/artist_thumb"
        android:layout_marginEnd="16dp"
        app:select="false"
        app:image_size="16dp"
        app:text_size="12"
        app:unselect_text_color="@color/text"
        app:unselect_text="@string/follow"
        app:unselect_background_color="@color/colorPrimary"
        app:unselect_image="@drawable/ic_add_16dp"
        app:select_text_color="@color/textColor_black_disable"
        app:select_text="@string/isfollow"
        app:select_background_color="@color/grey_alpha"
        app:select_image="@drawable/ic_close_16dp"
        android:id="@+id/btn_follow"
        android:background="?android:selectableItemBackgroundBorderless"
        />

    <View
        android:layout_width="0dp"
        android:layout_height="0.5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/artist_thumb"
        android:background="@color/textColor_black_disable"
        android:layout_marginTop="12dp"
        android:id="@+id/divider_line2"
        />

    <com.zhkrb.iwara.custom.FoldTextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/title"
        app:layout_constraintEnd_toEndOf="@id/title"
        app:layout_constraintTop_toBottomOf="@id/divider_line2"
        android:layout_marginTop="4dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textColor="@color/secondaryText"
        android:textSize="@dimen/caption"
        app:foldLine="0"
        android:id="@+id/text_info"
        android:autoLink="all"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_user_video_corr"
        android:text="@string/user_corr"
        app:layout_constraintStart_toStartOf="@id/text_video_view"
        app:layout_constraintTop_toBottomOf="@id/text_info"
        android:layout_marginTop="12dp"
        android:textSize="@dimen/subtitle2"
        />

    <com.zhkrb.iwara.custom.refreshView.ScaleRecyclerView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_user_video_corr"
        android:layout_marginTop="12dp"
        android:id="@+id/recyclerView_user_corr"
        android:overScrollMode="never"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_user_video_recomm"
        android:text="@string/text_recomm"
        app:layout_constraintStart_toStartOf="@id/text_video_view"
        app:layout_constraintTop_toBottomOf="@id/recyclerView_user_corr"
        android:layout_marginTop="12dp"
        android:textSize="@dimen/subtitle2"
        />

    <com.zhkrb.iwara.custom.refreshView.ScaleRecyclerView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_user_video_recomm"
        android:layout_marginTop="12dp"
        android:id="@+id/recyclerView_video_recomm"
        android:paddingBottom="8dp"
        android:translationZ="2dp"
        android:elevation="2dp"
        android:overScrollMode="never"
        />

<!--    <TextView-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@id/recyclerView_video_recomm"-->
<!--        android:id="@+id/text_comment_tip"-->
<!--        android:text="@string/comment_tip"-->
<!--        android:paddingStart="12dp"-->
<!--        android:paddingEnd="12dp"-->
<!--        android:paddingTop="8dp"-->
<!--        android:paddingBottom="8dp"-->
<!--        android:textSize="@dimen/subtitle2"-->
<!--        android:background="@color/shadowColor"-->
<!--        />-->

    <ViewStub
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recyclerView_video_recomm"
        android:id="@+id/stub_comment"
        android:layout_marginTop="4dp"
        android:layout="@layout/view_comment"
        />
</androidx.constraintlayout.widget.ConstraintLayout>